# blog_drf

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  schema.yml
backend/api/: constants.py  paginations.py  tasks.py  urls.py  validation.py
backend/api/management/commands/: generate_fake_data.py
backend/api/serializers/: posts.py  subscriptions.py  users.py
backend/api/views/: posts.py  subscriptions.py  users.py
backend/backend/: celery.py  settings.py  tasks.py  urls.py
backend/posts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/subscriptions/: admin.py  models.py  serializers.py  views.py
backend/subscriptions/migrations/: 0001_initial.py  0002_initial.py
backend/users/: admin.py  apps.py  models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py  0002_blog_blogpost.py
